Fix button shifting on hover

--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,8 @@
     --foreground-color: #f8f8f2;
   }
   main img {
-    filter: brightness(0) saturate(100%) invert(86%) sepia(3%) saturate(685%) hue-rotate(54deg) brightness(121%) contrast(95%);
+    filter: brightness(0) saturate(100%) invert(86%) sepia(3%) saturate(685%)
+      hue-rotate(54deg) brightness(121%) contrast(95%);
   }
 }
 :root {
@@ -32,7 +33,8 @@
   --yellow: #f1fa8c;
 }
 
-html, body {
+html,
+body {
   height: 100%;
 }
 
@@ -95,7 +97,7 @@ main .linkRow a img {
 }
 main .linkRow a:hover {
   animation: fadeIn2 1.5s infinite;
-  border: solid var(--purple) 0.2vw;
+  outline: solid var(--purple) 0.2vw;
   border-radius: 1vw;
 }
 
